--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -129,3 +129,14 @@
     </ul>
   </div>
 </div>
+
+
+<div id="rsvp" class="full rsvp">
+	<h3 class="title">RSVP</h3>
+	<div class="clearfix"></div>
+	<p>Don't feel like mailing your RSVP? Save a stamp, and let us know here!</p>
+	
+	<div class="inside form-size">
+    <%= render 'responses/form' %>
+	</div>
+</div>
