--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,8 +26,7 @@
   <body class="<%= controller_name %> <%= action_name %>">
     <%= render 'layouts/header' %>
     
-    <p class="notice reg"><%= notice %></p>
-    <p class="alert reg"><%= alert %></p>
+    <%= render 'shared/messages' %>
     <!-- <div class="inside med2-def"> -->
         <%= yield %>
     <!-- </div> -->
